# discord-bot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  sample_genshin_characters.sql
bot/: __main__.py  bot.py
bot/cogs/: genshin.py  setu.py
bot/utils/: base_cog.py  database.py  errors.py
discord_bot/: bot.py  client.py  database.py  genshin_character_id.py  genshin_user.py  logger.py  setu.py
