[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["GrassSand <grasssand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
genshinstats = "^1.4.4"
pillow = "^8.2.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
