[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["GrassSand <grasssand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
python-dotenv = "^0.19.1"
genshinstats = "^1.4.11"
pillow = "^8.4.0"
aiofiles = "^0.7.0"
sqlalchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
